manifests/homelab/argocd/NetworkPolicy-argocd-applicationset-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.2
    helm.sh/chart: argo-cd-10.8.2
  name: argocd-applicationset-controller
  namespace: argocd
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-applicationset-controller
  policyTypes:
    - Ingress
